filter appearance on mobile fixed. index.php updated with text

--- a/css/clubclever.css
+++ b/css/clubclever.css
@@ -990,6 +990,12 @@ h2 {
   padding: 5px 10px;
 }
 
+.desc-after ul {
+    margin-left: 20px;
+    text-indent: 0;
+    list-style: square;    
+}
+
 .aa-product-catg li .aa-badge {
   position: absolute;
   top: 5%;
